--- a/style.css
+++ b/style.css
@@ -9,12 +9,31 @@
     --colorShadeE: rgb(132, 243, 230);
 }
 
+/* Firefox */
+* {
+    scrollbar-width: auto;
+    scrollbar-color: #4ddcc1 #3b4252;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 16px;
+    background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #4ddcc1;
+    border-radius: 12px;
+    border: 3px groove #219787;
+}
+
 body {
     display: flex;
     flex-direction: column;
     margin: 0;
     min-height: 100vh;
     justify-content: space-between;
+    overflow: overlay;
 }
 
 .hero {
@@ -408,6 +427,7 @@ button {
 
 .banner-content {
     display: flex;
+    justify-content: center;
     background-color: #434c5e;
     padding: 50px 90px;
     margin: 30px;
@@ -443,6 +463,7 @@ button {
 
 .banner-button {
     min-width: 130px;
+    margin-top: -15px;
 }
 
 .footer {
